1998-10-20  Roland McGrath  <roland@baalperazim.frob.com>

	* unix.c (ftp_conn_unix_cont_get_stats): Add braces to silence gcc
	warning.
	* open.c (ftp_conn_sysify): Likewise.
	(ftp_conn_login): Likewise.
	* cwd.c (ftp_conn_cdup): Likewise.
	(ftp_conn_cwd): Likewise.
	(_cache_cwd): Likewise.
	* addr.c (ftp_conn_send_actv_addr): Likewise.
	(ftp_conn_get_pasv_addr): Likewise.

1997-09-04  Miles Bader  <miles@gnu.ai.mit.edu>

	* ftpconn.h [!FTP_CONN_EI] (FTP_CONN_EI): New macro.
	(ftp_conn_validate_syshooks): Use FTP_CONN_EI instead of
	`static inline'.
	Protect with __OPTIMIZE__.

	* ftpconn.h (struct ftp_conn): Remove ACTV_DATA_CONN_QUEUE field.
	* create.c (ftp_conn_create): Don't initialize
	CONN->actv_data_conn_queue.
	* open.c (ftp_conn_close): Don't cleanup CONN->actv_data_conn_queue.
	* xfer.c (ftp_conn_start_open_actv_data): Always generate a new data
	connection (it doesn't work to always listen on a single address).
	(ftp_conn_finish_open_actv_data): Close the listen queue after
	looking for a connection.
	(ftp_conn_abort_open_actv_data): Close the data queue socket.

1997-09-02  Miles Bader  <miles@gnu.ai.mit.edu>

	* xfer.c (ftp_conn_start_open_actv_data): If necessary, reopen the
	control connection for getsockname.

1997-08-27  Miles Bader  <miles@gnu.ai.mit.edu>

	* ftpconn.h (struct ftp_conn): Add the ACTV_DATA_ADDR and
	ACTV_DATA_CONN_QUEUE fields.
	* create.c (ftp_conn_free): Free the ACTV_DATA_ADDR field.
	(ftp_conn_create): Initialiaze the ACTV_DATA_ADDR &
	ACTV_DATA_CONN_QUEUE fields.
	* open.c (ftp_conn_close): Close CONN->actv_data_conn_queue if necessary.
	* xfer.c (ftp_conn_start_open_actv_data): Renamed ftp_conn_open_actv_data.
	Correctly generate data address.
	(ftp_conn_start_open_data): Renamed from ftp_conn_open_data.
	(ftp_conn_finish_open_data, ftp_conn_finish_open_actv_data): New
	functions.
	(ftp_conn_start_transfer): Use ftp_conn_start_open_data and
	ftp_conn_finish_open_data instead of ftp_conn_open_data.
